--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jitsi/react-sdk": "^1.4.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "gapi-client": "^0.0.3",
+    "gapi-script": "^1.2.0",
+    "googleapis": "^144.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
