--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@jitsi/react-sdk": "^1.4.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "gapi-client": "^0.0.3",
     "gapi-script": "^1.2.0",
     "googleapis": "^144.0.0",
